--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -8,7 +8,7 @@
 
        <meta name="decription" content="Tehcium is a digital agency">
 
-       <link rel="icon" type="image/x-icon" href="./favicon.ico"
+       <link rel="icon" type="image/x-icon" href="./favicon.ico">
        <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body></body>
