--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -6,7 +6,7 @@
        
        <title>Homepage - Techium</title>
 
-       <meta name="decription" content="Tehcium is a digital agency">
+       <meta name="description" content="Tehcium is a digital agency">
 
        <link rel="icon" type="image/x-icon" href="./favicon.ico">
        <link rel="icon" type="image/png" href="./favicon.png">
