--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -7,8 +7,8 @@
        <title>Homepage - Techium</title>
        <meta name="description" content="Techium is a digital agency">
 
-       <link rel="icon" type="image/x-icon" href="./favicon.ico">
-       <link rel="icon" type="image/png" href="./favicon.png">
+       <link rel="icon" type="image/x-icon" href=".Assets/favicon.ico">
+       <link rel="icon" type="image/png" href=".Assets/favicon.png">
     </head>
     <body></body>
 </html>
