--- a/html_advanced/7-index.html
+++ b/html_advanced/7-index.html
@@ -6,9 +6,9 @@
        
        <title>Homepage - Techium</title>
 
-       <meta name="decription" content="Tehcium is a digital agency">
+       <meta name="description" content="Techium is a digital agency">
 
-       <link rel="icon" type="image/x-icon" href="./favicon.ico"
+       <link rel="icon" type="image/x-icon" href="./favicon.ico">
        <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     
