--- a/html_advanced/5-index.html
+++ b/html_advanced/5-index.html
@@ -16,7 +16,7 @@
         <header>Header</header>
             <main>
                 <section>Hero section</section>
-                <section>Services secction</section>
+                <section>Services section</section>
                 <section>Works section</section>
                 <section>About section</section>
                 <section>Latest news section</section>
