--- a/flexbox/5-index.html
+++ b/flexbox/5-index.html
@@ -10,49 +10,46 @@
     <link rel='stylesheet' href='styles.css'>
   </head>
   <body>
-    
     <!-- Header -->
     <header class="header" data-section-theme="dark">
       <div class="container">
         <div class="header-container">
-          <div class="header-logo">
-            <a href="#">
-              <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
-            </a>
-          </div>
-          <nav class="navbar-menu">
-            <ul class="nav">
-              <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="#services" class="nav-link">Services</a>
-              </li>
-              <li class="nav-item">
-                <a href="#works" class="nav-link">Works</a>
-              </li>
-              <li class="nav-item">
-                <a href="#about" class="nav-link">About</a>
-              </li>
-              <li class="nav-item">
-                <a href="#latest_news" class="nav-link">Latest news</a>
-              </li>
-              <li class="nav-item">
-                <a href="#testimonials" class="nav-link">Testimonials</a>
-              </li>
-              <li class="nav-item">
-                <a href="#contact" class="nav-link">Contact</a>
-              </li>
-            </ul>
-          </nav>
+        <div class="header-logo">
+          <a href="#">
+            <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
+          </a>
         </div>
+        <nav class="navbar-menu">
+          <ul class="nav">
+            <li class="nav-item">
+              <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#services" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="#works" class="nav-link">Works</a>
+            </li>
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#latest_news" class="nav-link">Latest news</a>
+            </li>
+            <li class="nav-item">
+              <a href="#testimonials" class="nav-link">Testimonials</a>
+            </li>
+            <li class="nav-item">
+              <a href="#contact" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </nav>
+    </div>
       </div>
-    </header>\
-    
+    </header>
     <!-- Main -->
     <main>
-
-      <!-- Hero Section -->
+      <!-- Hero section -->
       <section class="section-hero" data-section-theme="dark">
         <div class="container">
           <div class="section-body">
@@ -63,8 +60,7 @@
           </div>
         </div>
       </section>
-
-      <!-- Services Section -->
+      <!-- Services section -->
       <section id="services" class="section section-services">
         <div class="container">
           <header class="section-header">
@@ -88,27 +84,14 @@
                   <h3 class="card-title"><a href="#">Content Strategy</a></h3>
                 </div>
               </li>
-              <li class="col-1-3">
-                <div class="card-services">
-                  <h3 class="card-title"><a href="#">UX Design</a></h3>
-                </div>
-              </li>
-              <li class="col-1-3">
-                <div class="card-services">
-                  <h3 class="card-title"><a href="#">Web Development</a></h3>
-                </div>
-              </li>
-              <li class="col-1-3">
-                <div class="card-services">
-                  <h3 class="card-title"><a href="#">Social Media</a></h3>
-                </div>
-              </li>
+              <li></li>
+            <li></li>
+            <li></li>
             </ul>
           </div>
         </div>
       </section>
-
-      <!-- Works Section -->
+      <!-- Works section -->
       <section id="works" class="section section-works" data-section-theme="dark">
         <div class="container">
           <header class="section-header">
@@ -157,8 +140,7 @@
           </div>
         </div>
       </section>
-
-      <!-- About Us Section -->
+      <!-- About Us section -->
       <section id="about" class="section section-about-us">
         <div class="container">
           <header class="section-header">
@@ -185,8 +167,7 @@
           </div>
         </div>
       </section>
-
-      <!-- Latest News Section -->
+      <!-- Latest news section -->
       <section id="latest_news" class="section section-latest-news">
         <div class="container">
           <header class="section-header">
@@ -231,8 +212,7 @@
           </div>
         </div>
       </section>
-
-      <!-- Testimonials Section -->
+      <!-- Testimonials section -->
       <section id="testimonial" class="section section-testimonial">
         <div class="container">
           <header class="section-header">
@@ -275,13 +255,12 @@
           </div>
         </div>
       </section>
-
-      <!-- Contact Section -->
+      <!-- Contact section -->
       <section id="contact" class="section section-contact">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Contact</h2>
-            <p class="section-tagline">We’d love to hear from you!</p>
+            <p class="section-tagline">We'd love to hear from you!</p>
           </header>
           <div class="section-body">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
@@ -292,7 +271,6 @@
         </div>
       </section>
     </main>
-
     <!-- Footer -->
     <footer class="footer" data-section-theme="dark">
       <div  class="container">
