--- a/Bootstrap/1-index.html
+++ b/Bootstrap/1-index.html
@@ -1,60 +1,75 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-        <title>Holberton - Web Stack - Bootstrap</title>
-        <meta name="description" content="Bootstrap is a free and open-source CSS framework">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <title>Holberton - Web Stack - Bootstrap</title>
+    <meta name="description" content="Bootstrap is a free and open-source CSS framework">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+<body>
+    <div class="row text-white text-center">
+        <div class="col-lg p-2 bg-primary">Primary</div>
+        <div class="col-lg p-2 bg-success">Success</div>
+        <div class="col-lg p-2 bg-danger">Danger</div>
+        <div class="col-lg p-2 bg-warning">Warning</div>
+    </div>
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    </head>
-    <body>
-        <div>
-            <div>Primary</div>
-            <div>Success</div>
-            <div>Danger</div>
-            <div>Warning</div>
-        </div>
+    <hr />
 
-        <hr />
+    <div class="row text-white text-center">
+        <div class="col-sm p-2 bg-primary">Primary</div>
+        <div class="col-sm p-2 bg-success">Success</div>
+        <div class="col-sm p-2 bg-danger">Danger</div>
+        <div class="col-sm p-2 bg-warning">Warning</div>
+    </div>
 
-        <div>
-            <div>Primary</div>
-            <div>Success</div>
-            <div>Danger</div>
-            <div>Warning</div>
-        </div>
+    <hr />
 
-        <hr />
+    <div class="row text-white text-center">
+        <div class="col-lg-2 p-2 bg-primary">Primary</div>
+        <div class="col-lg-4 p-2 bg-success">Success</div>
+        <div class="col-lg-6 p-2 bg-danger">Danger</div>
+    </div>
 
-        <div>
-            <div>Primary</div>
-            <div>Success</div>
-            <div>Danger</div>
-        </div>
+    <hr />
 
-        <hr />
+    <div class="row text-white text-center">
+        <div class="col p-2 bg-primary
+                    order-xl-1
+                    order-lg-2
+                    order-md-3
+                    order-sm-4">Primary</div>
+        <div class="col p-2 bg-success
+                    order-xl-2
+                    order-lg-3
+                    order-md-4
+                    order-sm-1">Success</div>
+        <div class="col p-2 bg-danger
+                    order-xl-3
+                    order-lg-4
+                    order-md-1
+                    order-sm-2">Danger</div>
+        <div class="col p-2 bg-warning
+                    order-xl-4
+                    order-lg-1
+                    order-md-2
+                    order-sm-3">Warning</div>
+    </div>
 
-        <div>
-            <div>Primary</div>
-            <div>Success</div>
-            <div>Danger</div>
-            <div>Warning</div>
-        </div>
+    <hr/>
 
-        <hr/>
+    <div class="row justify-content-between text-center text-white">
+        <div class="col-md-2 p-2 bg-primary">Primary</div>
+        <div class="col-md-2 p-2 bg-success">Success</div>
+    </div>
 
-        <div>
-            <div>Primary</div>
-            <div>Success</div>
-        </div>
+    <hr/>
 
-        <hr/>
-
-        <div>
-            <div>Primary</div>
-            <div>Success</div>
-            <div>Danger</div>
-        </div>
-    </body>
+    <div class="row justify-content-between text-white text-center">
+        <div class="col-md-2 p-2 bg-primary">Primary</div>
+        <div class="col-md-2 offset-md-4 p-2 bg-success">Success</div>
+        <div class="col-md-2 offset-md-2 p-2 bg-danger">Danger</div>
+    </div>
+</body>
 </html>
