--- a/Bootstrap/5-index.html
+++ b/Bootstrap/5-index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-        <title>Holberton - Web Stack - Bootstrap</title>
-        <meta name="description" content="Bootstrap is a free and open-source CSS framework">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+    <title>Holberton - Web Stack - Bootstrap</title>
+    <meta name="description" content="Bootstrap is a free and open-source CSS framework">
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    </head>
-    <body>
-        <h1>Small title</h1>
-        <h1>Big title</h1>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+</head>
+<body>
+    <h1 class="d-md-none">Small title</h1>
+    <h1 class="d-none d-md-block">Big title</h1>
 
-        <div>
-            <div>Left</div>
-            <div>Middle</div>
-            <div>Right</div>
+    <div class="container-fluid bg-info p-3 border border-info rounded text-light">
+        <div class="d-flex justify-content-between">
+            <div class="p-3 border-right border-bottom border-light">Left</div>
+            <div class="p-3 border-left border-right border-bottom border-light shadow d-none d-md-block">Middle</div>
+            <div class="p-3 border-left border-bottom border-light">Right</div>
         </div>
-
-    </body>
+    </div>
+</body>
 </html>
