--- a/Cookies_local_storage/3-index.html
+++ b/Cookies_local_storage/3-index.html
@@ -7,7 +7,8 @@
     <style>
         #logoutLink {
             font-style: italic;
-            margin-left: 10px;
+            text-decoration: none;
+            color: black;
         }
     </style>
 </head>
